tests/errors/add_to_nonset.l26
{
    int x;
    x = 1;
    add x 5;        // error: 'add' requires a set variable
}
